fix: fixed alignment of the crypto-address-box

--- a/packages/wallets/src/features/cashier/modules/DepositCrypto/components/DepositCryptoAddress/DepositCryptoAddress.scss
+++ b/packages/wallets/src/features/cashier/modules/DepositCrypto/components/DepositCryptoAddress/DepositCryptoAddress.scss
@@ -23,7 +23,6 @@
 
         @include mobile {
             width: 100%;
-            max-width: 32.8rem;
         }
 
         &-text {
